fix(*): update the notification UI alignment

--- a/src/app/features/notifications/notifications.component.scss
+++ b/src/app/features/notifications/notifications.component.scss
@@ -1,21 +1,18 @@
-.toolbar-icon {
-    color: white;
-}
-
-.mat-mdc-menu-content {
-    padding: 0px !important;
+.notification-items {
+    padding: 0px 16px;
+    margin-bottom: 20px;
 }
 
 .header  {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding: 0px 16px;
     background-color: #ff9800;
     margin-bottom: 20px;
 }
 
-.footer {
-    text-align: center;
-    padding: 8px;
+.mat-menu {
+    padding-top: 0 !important;
+}
+
+.notification-toggle {
+    padding: 12px 0px;
 }
